--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,7 +27,7 @@
   }
 
   .form-input {
-    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 shadow-sm;
+    @apply bg-gray-50 border border-gray-200 text-gray-900 text-sm rounded-lg focus:ring-cyan-500 focus:border-cyan-500 block w-full p-2.5 shadow-sm  outline-none;
   }
 }
 
